# raytracer

./: CMakeLists.txt  README.md
src/: camera.cc  camera.h  geometry.h  shape.cc  shape.h  sphere.cc  sphere.h  transform.cc  transform.h  untitled.cc  untitled.h
src/cameras/: orthographic.cc  orthographic.h
src/core/: camera.cc  camera.h  film.cc  film.h  geometry.h  integrator.cc  integrator.h  shape.cc  shape.h  transform.cc  transform.h  untitled.h
src/main/: untitled.cc
src/shapes/: sphere.cc  sphere.h
